<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Video1"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <VideoView
            android:id="@+id/yoengkim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/deskripsi1">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="Video 1"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/judulVideo"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/videodesk"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAlignment="textStart"
            android:id="@+id/teksDesc"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/resource"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/youtube"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"/>



    </LinearLayout>




</LinearLayout>